<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CreatePostActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical">

                        <ImageView
                            android:id="@+id/iv_close"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:adjustViewBounds="true"
                            android:padding="10dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_close"
                            app:tint="@color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/create_post"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="end|center_vertical">

                        <Button
                            android:id="@+id/btn_post"
                            android:layout_width="80dp"
                            android:layout_height="40dp"
                            android:background="@drawable/create_post_btn_enabled"
                            android:text="@string/post"
                            android:textAllCaps="false"
                            android:textColor="#90FFFFFF"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </FrameLayout>

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ogabekdev"
                app:shapeAppearanceOverlay="@style/circle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/ogabek_matyakubov"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/et_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:autoLink="web"
                android:background="#00000000"
                android:hint="@string/what_s_on_your_mind"
                android:inputType="text|textMultiLine"
                android:linksClickable="false"
                android:textColorLink="#2196F3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/link_preview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_text">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/iv_link_photo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:scaleType="centerInside"
                            android:src="@drawable/post_2" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="top|end">

                            <ImageView
                                android:id="@+id/iv_close_url"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_margin="10dp"
                                android:background="@drawable/shape_border_rounded"
                                android:padding="5dp"
                                android:src="@drawable/ic_close" />

                        </LinearLayout>

                    </FrameLayout>

                    <TextView
                        android:id="@+id/tv_link_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/ogabek_dev"
                        android:textColor="#90000000"
                        android:textSize="12sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tv_link_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/link_info"
                        android:textColor="#000000"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>